--- a/conf/model/vcfm.yaml
+++ b/conf/model/vcfm.yaml
@@ -2,7 +2,7 @@ name: 'vcfm'
 use_ema: True
 ema_rate: 0.999
 ema_type: 'traditional'
-class_conditional: False
+class_conditional: True
 
 total_training_steps: 400000
 velocity_learning_rate: 0.0002
