--- a/conf/model/vcfm.yaml
+++ b/conf/model/vcfm.yaml
@@ -4,7 +4,6 @@ ema_rate: 0.99
 ema_type: 'traditional'
 class_conditional: True
 
-total_training_steps: 400000
 velocity_learning_rate: 0.0002
 coupling_learning_rate: 0.001
 velocity_weight_decay: 0.0
@@ -18,3 +17,8 @@ straightness_phi_weight: 1.0
 kl_phi_weight: 1.0
 min_log_std: -5.0
 max_log_std: 3.0
+phi_warmup_steps: 10000
+theta_warmup_steps: 10000
+early_training_steps: 100000
+late_training_steps: 150000
+final_training_steps: 130000
