--- a/conf/model/vcfm.yaml
+++ b/conf/model/vcfm.yaml
@@ -6,15 +6,15 @@ class_conditional: True
 
 total_training_steps: 400000
 velocity_learning_rate: 0.0002
-coupling_learning_rate: 0.0002
+phi_learning_rate: 0.0002
 velocity_weight_decay: 0.0
-coupling_weight_decay: 0.0
+phi_weight_decay: 0.0
 
 sigma_min: 0.002
 sigma_max: 80.0
 flow_matching_theta_weight: 1000.0
-straightness_theta_weight: 1.0
-straightness_phi_weight: 1.0
+straightness_weight: 1.0
 kl_phi_weight: 100.0
-min_log_std: -5.0
-max_log_std: 3.0
+latent_dim: 256
+phi_hidden_channels: 128
+phi_num_layers: 2
